--- a/astro/src/pages/[lang]/[landing].astro
+++ b/astro/src/pages/[lang]/[landing].astro
@@ -112,6 +112,8 @@ switch (landing.category.slug) {
 
     :global([data-theme='dark']) & {
       background-color: var(--phosphor-grey) !important;
+      border: 2px solid var(--phosphor-green);
+      // margin-top: -2px;
     }
 
     &--title {
@@ -120,7 +122,7 @@ switch (landing.category.slug) {
       padding-block: var(--header-spacing);
 
       :global([data-theme='dark']) & {
-        color: var(--global-foreground);
+        color: var(--global-green);
       }
     }
 
