Move to CSS2 API for fonts

--- a/site/_layouts/_wrapper.njk
+++ b/site/_layouts/_wrapper.njk
@@ -20,7 +20,8 @@
     <link rel="preconnect" href="https://www.gstatic.com" crossorigin="" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="" />
     <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin="" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Google+Sans:400,500|Google+Sans+Text:400,400i,500,700,700i|Google+Sans+Mono:400,600&display=swap" />
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Google+Sans+Text:wght@0,400;1,400;500;0,700;1,700&family=Google+Sans:wght@400;500&family=Google+Sans+Mono:wght@400;600&display=swap" as="style" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Google+Sans+Text:wght@0,400;1,400;500;0,700;1,700&family=Google+Sans:wght@400;500&family=Google+Sans+Mono:wght@400;600&display=swap" />
     <link rel="stylesheet" href="/sass/style.scss" />
     <script type="module" defer src="/js/main.js"></script>
     <script defer src="https://www.googletagmanager.com/gtm.js?id=GTM-P2W8H6G"></script>
