fix missing style query value

--- a/site/src/pages/[lang]/guidelines.astro
+++ b/site/src/pages/[lang]/guidelines.astro
@@ -282,7 +282,7 @@ const {
       padding-block: 2.5rem;
       padding-inline: 1.5rem;
 
-      @container style(--inline-aside) {
+      @container style(--inline-aside: 1) {
         grid-column: 3;
         padding-inline: 0;
       }
