Upgrade to Node 20
Also upgrades linting to match

--- a/site/src/layouts/wrapper.astro
+++ b/site/src/layouts/wrapper.astro
@@ -53,7 +53,7 @@ const t =
   (title && title !== 'ChromeOS.dev' ? title + ' | ' : '') + 'ChromeOS.dev';
 ---
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang={locale.code} dir={locale.dir}>
   <head>
     <meta charset="UTF-8" />
