--- a/site/src/pages/[lang]/[landing].astro
+++ b/site/src/pages/[lang]/[landing].astro
@@ -111,9 +111,11 @@ switch (landing.category.slug) {
     gap: 1rem;
 
     :global([data-theme='dark']) & {
+      /* stylelint-disable declaration-no-important */
+      // Need the background to be grey no matter what
       background-color: var(--phosphor-grey) !important;
       border: 2px solid var(--phosphor-green);
-      // margin-top: -2px;
+      /* stylelint-enable declaration-no-important */
     }
 
     &--title {
