--- a/site/src/pages/[lang]/[landing].astro
+++ b/site/src/pages/[lang]/[landing].astro
@@ -15,18 +15,20 @@ import Card from '$components/Card.svelte';
  * @return {object} paths
  */
 export function getStaticPaths() {
-  return landings.map((landing) => {
-    return {
-      params: {
-        lang: landing._langCode,
-        landing: landing._slug,
-      },
-      props: {
-        landing,
-        microcopy: micro[landing._lang],
-      },
-    };
-  });
+  return landings
+    .filter((h) => h._langCode === 'en')
+    .map((landing) => {
+      return {
+        params: {
+          lang: landing._langCode,
+          landing: landing._slug,
+        },
+        props: {
+          landing,
+          microcopy: micro[landing._lang],
+        },
+      };
+    });
 }
 
 const { landing, microcopy } = Astro.props;
