--- a/site/src/pages/[lang]/search.astro
+++ b/site/src/pages/[lang]/search.astro
@@ -11,14 +11,16 @@ import { languages } from '$$sanity';
  * @return {object[]} Paths
  */
 export function getStaticPaths() {
-  return languages.map((l) => ({
-    params: {
-      lang: l.code,
-    },
-    props: {
-      microcopy: getMicrocopy(l.code),
-    },
-  }));
+  return languages
+    .filter((h) => h.code === 'en')
+    .map((l) => ({
+      params: {
+        lang: l.code,
+      },
+      props: {
+        microcopy: getMicrocopy(l.code),
+      },
+    }));
 }
 
 const { microcopy } = Astro.props;
