--- a/site/src/components/portable-text/PortableText.astro
+++ b/site/src/components/portable-text/PortableText.astro
@@ -20,6 +20,7 @@ const components = {
     link: DynamicBody,
     kbd: DynamicBody,
     footnote: DynamicBody,
+    abbreviation: DynamicBody,
   },
   type: {
     Message: DynamicBody,
@@ -33,6 +34,7 @@ const components = {
     span: DynamicBody,
     break: DynamicBody,
     table: DynamicBody,
+    deflist: DynamicBody,
   },
   hardbreak: DynamicBody,
 };
