--- a/site/src/sass/components/_typography.scss
+++ b/site/src/sass/components/_typography.scss
@@ -131,7 +131,7 @@ $section-block-margin: 3.75rem;
 
   // Long-form type styling
   /* stylelint-disable-next-line selector-max-compound-selectors */
-  * + *:not(:empty):not(.header-anchor--wrapper),
+  * + *:not(:empty):not(.header-anchor--wrapper):not(dd),
   * + astro-island > *:not(:empty) {
     margin-top: 1em;
   }
