--- a/site/src/layouts/section.astro
+++ b/site/src/layouts/section.astro
@@ -14,23 +14,27 @@ const { title, metadesc, locale } = Astro.props;
 ---
 
 <Wrapper title={title} metadesc={metadesc} locale={locale}>
-  <article class="section">
-    <aside class="section--subnav">
-      <slot name="subnav" />
+  <article class='section'>
+    <aside class='section--subnav'>
+      <slot name='subnav' />
     </aside>
-    <div class="section--header">
-      <slot name="header" />
+    <div class='section--header'>
+      <slot name='header' />
     </div>
-    <section class="section--content">
-      <slot name="content" />
+    <section class='section--content'>
+      <slot name='content' />
     </section>
-    <section class="section--topics">
-      <slot name="topics" />
-    </section>
+    {
+      Astro.slots.has('topics') && (
+        <section class='section--topics'>
+          <slot name='topics' />
+        </section>
+      )
+    }
   </article>
 </Wrapper>
 
-<style lang="scss">
+<style lang='scss'>
   @import '$sass/shared';
 
   .section {
