Make details swinger work in dark mode

--- a/site/src/pages/[lang]/releases.astro
+++ b/site/src/pages/[lang]/releases.astro
@@ -313,8 +313,12 @@ console.log(rest);
     gap: 0;
   }
 
-  [open] .details-marker {
-    transform: rotate(90deg);
+  .details-marker {
+    fill: currentColor;
+
+    [open] & {
+      transform: rotate(90deg);
+    }
   }
 
   // .topics-header {
