--- a/site/src/layouts/wrapper.astro
+++ b/site/src/layouts/wrapper.astro
@@ -99,6 +99,12 @@ const t =
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Google+Sans+Text:wght@0,400;1,400;500;0,700;1,700&family=Google+Sans:wght@400;500&family=Google+Sans+Mono:wght@400;600&display=swap"
     />
+    <link
+      rel="alternate"
+      type="application/rss+xml"
+      title="ChromeOS.dev"
+      href={`${Astro.site}${locale.code}/rss.xml`}
+    />
     <script defer src="https://www.googletagmanager.com/gtm.js?id=GTM-P2W8H6G"
     ></script>
 
