--- a/site/src/components/Footer.astro
+++ b/site/src/components/Footer.astro
@@ -43,6 +43,17 @@ const { links, help } = microcopy.footer;
         <span>{help.text}</span>
       </a>
       <ThemeToggle client:load />
+      <a href={`/${lang}/rss.xml`} class="rss" title="RSS">
+        <svg
+          aria-hidden="true"
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 -960 960 960"
+        >
+          <path
+            d="M200-120q-33 0-56.5-23.5T120-200q0-33 23.5-56.5T200-280q33 0 56.5 23.5T280-200q0 33-23.5 56.5T200-120Zm480 0q0-117-44-218.5T516-516q-76-76-177.5-120T120-680v-120q142 0 265 53t216 146q93 93 146 216t53 265H680Zm-240 0q0-67-25-124.5T346-346q-44-44-101.5-69T120-440v-120q92 0 171.5 34.5T431-431q60 60 94.5 139.5T560-120H440Z"
+          ></path>
+        </svg>
+      </a>
       <!-- <LanguageSwitcher
         languages={languages}
         current={lang}
@@ -104,6 +115,19 @@ const { links, help } = microcopy.footer;
       padding-block: 1rem;
       row-gap: 1rem;
       column-gap: 1.5rem;
+    }
+  }
+
+  .rss {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    svg {
+      height: 1rem;
+      width: 1rem;
+      scale: 1.2;
+      fill: var(--grey-700);
     }
   }
 </style>
