Add badges zip to A2C page

--- a/site/src/pages/[lang]/add-to-chromebook-badges.astro
+++ b/site/src/pages/[lang]/add-to-chromebook-badges.astro
@@ -32,7 +32,7 @@ const { locale } = microcopy;
 const { title, share, banner, intro, guidelines, usage, codegen, messaging } =
   data;
 
-const downloadSize = '14kb';
+const downloadSize = '110 KB';
 
 codegen.download = codegen.download.replace('((s))', `(${downloadSize})`);
 ---
